[project]
name = "blockelplot"
version = "0.0.1"
authors = [{ name = "Richard Nathan Ambler", email = "rambler@wya.top" }]
description = "A simple terminal graphics library."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Typing :: Typed",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ram6ler/blockelplot"
Issues = "https://github.com/ram6ler/blockelplot/issues"

[tool.setuptools.package-data]
"blockelplot" = ["py.typed"]
